--- a/src/Copy.ipynb
+++ b/src/Copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "a1b6318b-4300-49dc-8265-c65ef96d903c",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "cefac8b6-dbe1-412f-9562-2a023da484f4",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "06f8038c-9314-4c7d-8518-bdb25606a47a",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "ed167112-b1af-4413-ae54-d3d55dddb390",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "792171ae-9f66-4ea6-bcf4-95a3da2d759f",
    "metadata": {
     "editable": true,
@@ -99,8 +99,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "id": "7f271754-7fe8-4908-9939-381567fc3ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title                13\n",
+       "release_date     185133\n",
+       "budget          1074413\n",
+       "year             185133\n",
+       "month            185133\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_relevant.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "00249d97-55f6-4748-b8e6-868c7d5d9696",
    "metadata": {},
    "outputs": [
     {
@@ -133,65 +159,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Inception</td>\n",
-       "      <td>2010-07-15</td>\n",
-       "      <td>160000000.0</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Interstellar</td>\n",
-       "      <td>2014-11-05</td>\n",
-       "      <td>165000000.0</td>\n",
-       "      <td>2014.0</td>\n",
+       "      <th>10070</th>\n",
+       "      <td>Kiss of the Spider Woman</td>\n",
+       "      <td>1985-07-26</td>\n",
        "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>The Dark Knight</td>\n",
-       "      <td>2008-07-16</td>\n",
-       "      <td>185000000.0</td>\n",
-       "      <td>2008.0</td>\n",
+       "      <td>1985.0</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>2009-12-15</td>\n",
-       "      <td>237000000.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Avengers</td>\n",
-       "      <td>2012-04-25</td>\n",
-       "      <td>220000000.0</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <th>701082</th>\n",
+       "      <td>Kiss of the Spider Woman</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             title release_date       budget    year  month\n",
-       "0        Inception   2010-07-15  160000000.0  2010.0    7.0\n",
-       "1     Interstellar   2014-11-05  165000000.0  2014.0   11.0\n",
-       "2  The Dark Knight   2008-07-16  185000000.0  2008.0    7.0\n",
-       "3           Avatar   2009-12-15  237000000.0  2009.0   12.0\n",
-       "4     The Avengers   2012-04-25  220000000.0  2012.0    4.0"
+       "                           title release_date  budget    year  month\n",
+       "10070   Kiss of the Spider Woman   1985-07-26    11.0  1985.0    7.0\n",
+       "701082  Kiss of the Spider Woman          NaT     NaN     NaN    NaN"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_relevant.head(5)"
+    "df_kiss_spider_woman = df_relevant[df_relevant['title'] == 'Kiss of the Spider Woman']\n",
+    "\n",
+    "df_kiss_spider_woman"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "738e3419-8be3-41a9-a038-1e6ebf6f00cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58310"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1132723-1074413"
    ]
   },
   {
