Part 1 Datastory Clean Code
.

--- a/story_1_2.ipynb
+++ b/story_1_2.ipynb
@@ -2146,10 +2146,244 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf9596e3-b9a0-46ed-87f1-bd4c8772b7a0",
+   "id": "41bfdac8-47af-47b0-9025-b5325e221de7",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2554aa74-bae0-494e-9234-ab4d413dd5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bubble chart linking month to profitability for each genre along with the movies budget.\n",
+    "df_bubble = df_exploded.copy()  \n",
+    "df_bubble = df_bubble[df_bubble['decade'] > 1989]  # Keeping only last 20 years\n",
+    "df_bubble = df_bubble[df_bubble['Movie genres'].isin(genres_list)].reset_index(drop=True)\n",
+    "\n",
+    "df_aggregated = df_bubble.groupby(['Movie genres', 'Movie release month']).agg(median_profitability=('profitability', 'median'),median_budget=('budget', 'median')).reset_index()\n",
+    "\n",
+    "#PLOT\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "bubble_chart = sns.scatterplot(data=df_aggregated,y=\"median_profitability\", x=\"Movie release month\", size=\"median_budget\",  sizes=(200, 1500),  hue=\"Movie genres\",  palette=\"Set2\", alpha=0.8 )\n",
+    "\n",
+    "bubble_chart.set_title(\"Bubble Chart of Profitability by Release Month (Last 20 Years)\", fontsize=16)\n",
+    "bubble_chart.set_xlabel(\"Release Month\", fontsize=12)\n",
+    "bubble_chart.set_ylabel(\"Median Profitability\", fontsize=12)\n",
+    "\n",
+    "#Customize legend\n",
+    "handles, labels = plt.gca().get_legend_handles_labels()\n",
+    "print(labels)\n",
+    "new_labels = [\n",
+    "    \"MOVIE GENRE\", \n",
+    "    'Action', \n",
+    "    'Family', \n",
+    "    'LGBT', \n",
+    "    'Romantic', \n",
+    "    'Superhero', \n",
+    "    'War',\n",
+    "    \"MEDIAN BUDGET\",  \n",
+    "    \"40M\",  \n",
+    "    \"80M\",  \n",
+    "    \"120M\",  \n",
+    "    \"160M\",\n",
+    "    \"200M\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "plt.legend(handles, new_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\", fontsize=10, borderpad=1.5,labelspacing=2.5, frameon=True, borderaxespad=1)\n",
+    "month_names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "plt.xticks(ticks=np.linspace(1,12,12), labels=month_names)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fff87f1c-5de2-4bcf-9130-e3fb84f42072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Heatmap linking themes to genres, for profitability (including sample count between parenthesis)\n",
+    "\n",
+    "#Prepare data\n",
+    "df_heatmap = df_exploded.copy()  # Use your filtered dataset\n",
+    "df_heatmap = df_heatmap[df_heatmap['decade'] > 1989]  # Filter by decade\n",
+    "df_heatmap = df_heatmap[df_heatmap['Movie genres'].isin(genres_list)].reset_index(drop=True)\n",
+    "\n",
+    "#Combine median profitability and sample count into a str\n",
+    "df_aggregated = df_heatmap.groupby(['Movie genres', 'Movie release month']).agg(\n",
+    "    median_profitability=('profitability', 'median'),median_budget=('budget', 'median'),\n",
+    "    sample_size=('profitability', 'size'),median_runtime=('Movie runtime', 'median')).reset_index()\n",
+    "\n",
+    "df_heatmap_profitability = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"median_profitability\")\n",
+    "df_heatmap_count = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"sample_size\")\n",
+    "df_heatmap_budget = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"median_budget\")\n",
+    "df_heatmap_runtime = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"median_runtime\")\n",
+    "\n",
+    "annotations = pd.DataFrame(\"\", index=df_heatmap_profitability.index, columns=df_heatmap_profitability.columns, dtype=object)\n",
+    "for row in annotations.index:\n",
+    "    for col in annotations.columns:\n",
+    "        profitability = df_heatmap_profitability.loc[row, col]\n",
+    "        budget = df_heatmap_budget.loc[row, col]\n",
+    "        runtime = df_heatmap_runtime.loc[row, col]\n",
+    "        count = df_heatmap_count.loc[row, col]\n",
+    "        #if not pd.isna(profitability) and not pd.isna(count) and pd.isna(runtime) and pd.isna(budget):\n",
+    "        annotations.loc[row, col] = f\"{profitability:.2f}\\nN = {int(count)}\\n{int(runtime)} min\\n${int(budget)//1000000} M\"\n",
+    "\n",
+    "#Plot \n",
+    "plt.figure(figsize=(14, 10))\n",
+    "sns.heatmap(df_heatmap_profitability, annot=annotations,  fmt=\"\", cmap=\"YlGnBu\",linewidths=0.5,cbar_kws={'label': 'Median Profitability'})\n",
+    "\n",
+    "plt.title(\"Heatmap of Median Profitability by Movie Genres and Release Months\", fontsize=16)\n",
+    "plt.xlabel(\"Movie Release Month\", fontsize=12)\n",
+    "plt.ylabel(\"Movie Genres\", fontsize=12)\n",
+    "plt.xticks(rotation=45, ha='right') \n",
+    "plt.xticks(ticks=np.linspace(0.5,11.5,12), labels=month_names)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1e4594-62ab-4ae1-9e8a-4adae040e340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bubble chart linking month to profitability for each genre along with the movies budget.\n",
+    "df_bubble = df_exploded.copy()  \n",
+    "df_bubble = df_bubble[df_bubble['decade'] > 1989]  # Keeping only last 20 years\n",
+    "df_bubble = df_bubble[df_bubble['Movie genres'].isin(genres_list)].reset_index(drop=True)\n",
+    "\n",
+    "df_aggregated = df_bubble.groupby(['Movie genres', 'Movie release month']).agg(median_profitability=('profitability', 'median'),median_runtime=('Movie runtime', 'median')).reset_index()\n",
+    "\n",
+    "#PLOT\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "bubble_chart = sns.scatterplot(data=df_aggregated,y=\"median_profitability\", x=\"Movie release month\", size=\"median_runtime\",  sizes=(200, 1500),  hue=\"Movie genres\",  palette=\"Set2\", alpha=0.8 )\n",
+    "\n",
+    "bubble_chart.set_title(\"Bubble Chart of Profitability by Release Month (Last 20 Years)\", fontsize=16)\n",
+    "bubble_chart.set_xlabel(\"Release Month\", fontsize=12)\n",
+    "bubble_chart.set_ylabel(\"Median Profitability\", fontsize=12)\n",
+    "\n",
+    "#Customize legend\n",
+    "handles, labels = plt.gca().get_legend_handles_labels()\n",
+    "print(labels)\n",
+    "new_labels = [\n",
+    "    \"MOVIE GENRE\", \n",
+    "    'Action', \n",
+    "    'Family', \n",
+    "    'LGBT', \n",
+    "    'Romantic', \n",
+    "    'Superhero', \n",
+    "    'War',\n",
+    "    \"MEDIAN BUDGET\",  \n",
+    "    \"96 min\",  \n",
+    "    \"104 min\",  \n",
+    "    \"112 min\",  \n",
+    "    \"120 min\",  \n",
+    "    \"128 min\",  \n",
+    "\n",
+    "\n",
+    "]\n",
+    "\n",
+    "plt.legend(handles, new_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\", fontsize=10, borderpad=1.5,labelspacing=2.5, frameon=True, borderaxespad=1)\n",
+    "month_names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "plt.xticks(ticks=np.linspace(1,12,12), labels=month_names)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf9596e3-b9a0-46ed-87f1-bd4c8772b7a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Prepare data\n",
+    "df_heatmap = df_exploded.copy()  # Use your filtered dataset\n",
+    "df_heatmap = df_heatmap[df_heatmap['decade'] > 1989]  # Filter by decade\n",
+    "df_heatmap = df_heatmap[df_heatmap['Movie genres'].isin(genres_list)].reset_index(drop=True)\n",
+    "\n",
+    "#Combine median profitability and sample count into a str\n",
+    "df_aggregated = df_heatmap.groupby(['Movie genres', 'Movie release month']).agg(\n",
+    "    median_profitability=('profitability', 'median'),median_budget=('budget', 'median'),\n",
+    "    sample_size=('profitability', 'size'),median_runtime=('Movie runtime', 'median')).reset_index()\n",
+    "\n",
+    "df_heatmap_profitability = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"median_profitability\")\n",
+    "df_heatmap_count = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"sample_size\")\n",
+    "df_heatmap_budget = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"median_budget\")\n",
+    "df_heatmap_runtime = df_aggregated.pivot(index=\"Movie genres\", columns=\"Movie release month\", values=\"median_runtime\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Median Runtime by Month and Genre\n",
+    "median_runtime_by_month = df_aggregated.groupby('Movie release month')['median_runtime'].median()\n",
+    "median_runtime_by_genre = df_aggregated.groupby('Movie genres')['median_runtime'].median()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_aggregated['median_runtime_display'] = df_aggregated['median_runtime'].apply(lambda x: f\"{x:.1f} min\")\n",
+    "df_aggregated['median_budget_display'] = df_aggregated['median_budget'].apply(lambda x: f\"${x / 1000000:.1f} M\")\n",
+    "\n",
+    "fig = px.scatter(\n",
+    "    df_aggregated,\n",
+    "    x=\"Movie release month\",\n",
+    "    y=\"median_profitability\",\n",
+    "    size=\"median_budget\",  # Default size variable\n",
+    "    color=\"Movie genres\",\n",
+    "    hover_name=\"Movie genres\",\n",
+    "    hover_data={\n",
+    "        \"sample_size\": \":.0f\",\n",
+    "        \"median_budget_display\": True,\n",
+    "        \"median_runtime_display\": True,\n",
+    "        \"median_profitability\": \":.1f\",\n",
+    "        \"Movie release month\": True,\n",
+    "        \"median_budget\": False,\n",
+    "        \"Movie genres\": False\n",
+    "    },\n",
+    "    size_max=39,\n",
+    "    labels={\n",
+    "        \"median_profitability\": \"Median Profitability\",\n",
+    "        \"median_budget_display\": \"Median Budget\",\n",
+    "        \"Movie release month\": \"Release Month\",\n",
+    "        \"median_runtime_display\": \"Median Runtime\"\n",
+    "    },\n",
+    "    title=\"Interactive Bubble Chart of Profitability by Release Month (Last 20 Years)\"\n",
+    ")\n",
+    "\n",
+    "fig.update_traces(\n",
+    "    marker=dict(\n",
+    "        sizemode='area',\n",
+    "        sizemin=5\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "month_names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "fig.update_xaxes(\n",
+    "    tickvals=list(range(1, 13)),\n",
+    "    ticktext=month_names[:12]  # just in case we only have 6 months, still fine\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title_font_size=18,\n",
+    "    xaxis_title=\"Release Month\",\n",
+    "    yaxis_title=\"Median Profitability\",\n",
+    "    legend_title=\"Movie Genres\",\n",
+    "    width=900,\n",
+    "    height=600\n",
+    ")\n",
+    "\n",
+    "\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
