--- a/1_preliminary_analysis.ipynb
+++ b/1_preliminary_analysis.ipynb
@@ -1002,7 +1002,7 @@
     "\n",
     "- Most movies are in the 60 to 120 min interval. It seems movies are NOT longer during the winter months, interesting finding to investigate further on... There also are some outlier runtimes that are not errors.\n",
     "\n",
-    "- The compound score is clearly varies with time. It will be interesting to analyze it. "
+    "- The compound score clearly varies with time. It will be interesting to analyze it. "
    ]
   },
   {
