--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -27,13 +27,13 @@
    "source": [
     "![](visuals/1.png)\n",
     "\n",
-    "![](visuals/2.png)\n",
+    "<!-- ![](visuals/2.png) -->\n",
     "\n",
     "![](visuals/3.png)\n",
     "\n",
     "![](visuals/4.png)\n",
     "\n",
-    "![](visuals/5.png)"
+    "<!-- ![](visuals/5.png) -->"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "source": [
     "![](visuals/6.png)\n",
     "\n",
-    "![](visuals/7.png)\n",
+    "<!-- ![](visuals/7.png) -->\n",
     "\n",
     "![](visuals/8.png)\n",
     "\n",
@@ -78,6 +78,7 @@
    "metadata": {},
    "source": [
     "![](visuals/10.png)\n",
+    "Plot of number of movies within a certain range of runtimes. We can see that most movies are around the \n",
     "\n",
     "![](visuals/11.png)\n",
     "\n",
@@ -107,9 +108,9 @@
     "\n",
     "![](visuals/16.png)\n",
     "\n",
-    "![](visuals/17.png)\n",
+    "<!-- ![](visuals/17.png) -->\n",
     "\n",
-    "![](visuals/18.png)\n",
+    "<!-- ![](visuals/18.png) -->\n",
     "\n",
     "![](visuals/19.png)\n",
     "\n",
@@ -131,9 +132,9 @@
    "id": "87de1b43-a686-4fcc-ab2e-c2c341c96896",
    "metadata": {},
    "source": [
-    "![](visuals/20.png)\n",
+    "<!-- ![](visuals/20.png) -->\n",
     "\n",
-    "![](visuals/21.png)\n",
+    "<!-- ![](visuals/21.png) -->\n",
     "\n",
     "![](visuals/22.png)\n",
     "\n",
@@ -141,9 +142,9 @@
     "\n",
     "![](visuals/24.png)\n",
     "\n",
-    "![](visuals/25.png)\n",
+    "<!-- ![](visuals/25.png) -->\n",
     "\n",
-    "![](visuals/26.png)\n",
+    "<!-- ![](visuals/26.png) -->\n",
     "\n",
     "![](visuals/27.png)\n",
     "\n",
