--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "source": [
     "## Hypothesis 2: Does movie runtime influence revenue?\n",
-    "assuming ticket prices are constant, people might prefer longer movies as they would get more watchtime per dollar spent. "
+    "\n"
    ]
   },
   {
@@ -74,13 +74,20 @@
    "metadata": {},
    "source": [
     "![](visuals/10.png)\n",
-    "Plot of number of movies within a certain range of runtimes. We can see that most movies are around the \n",
+    "\n",
+    "Plot of number of movies within a certain range of runtimes. There’s a small group of much shorter films that are in the 0-30min range, which come mostly from the earlier years where technological and financial considerations limited runtimes of movies, and some that stretch well over two hours, but they’re relatively rare compared to the cluster in the middle. This suggests that “feature-length” typically centers around that hour-and-a-half sweet spot, with fewer productions choosing to deviate too far from it.\n",
     "\n",
     "![](visuals/11.png)\n",
     "\n",
+    "Early films in the 1910s and 1920s tended to be shorter, but by the mid-20th century, typical runtimes settled into a stable range around 90–100 minutes. Over the decades, the median runtime hasn’t shifted dramatically, suggesting that the “feature-length” standard reached a sweet spot and stayed there. Even so, there are always outliers—exceptionally long films appear in every era—but they remain the exception rather than the rule.\n",
+    "\n",
     "![](visuals/12.png)\n",
     "\n",
-    "![](visuals/13.png)"
+    "These boxplots show that movie runtimes don’t change much by release month. The medians stay around 90–100 minutes year-round, and every month has its share of short and long films. While December’s median might be a bit higher, the overall pattern is pretty steady. In other words, a film’s release month doesn’t seem to influence how long it is.\n",
+    "\n",
+    "![](visuals/13.png)\n",
+    "\n",
+    "The plot on the left suggests that across all movies, there isn’t a strong relationship between runtime and median profitability—the line’s basically flat. However, the plot on the right, focusing on the last 20 years, shows a positive trend, with longer movies tending to be more profitable on average. We can also consider that as time passed, higher budgets and marketing efforts often go to longer “event” films, which might explain their higher profitability. It’s not guaranteed that making a movie longer leads to bigger profits, but the data suggests a recent pattern where movies that run a bit longer may be benefiting from greater audience interest and investment."
    ]
   },
   {
@@ -149,8 +156,8 @@
    "id": "1037ad5f-f7a4-4e69-bc1f-9623d9ebff6b",
    "metadata": {},
    "source": [
-    "## Combined results\n",
-    "# COMMENT AJOUTER UN PLOT ANIMÉ HTML?"
+    "<!-- ## Combined results\n",
+    "# COMMENT AJOUTER UN PLOT ANIMÉ HTML? -->"
    ]
   },
   {
