Hypothesis 4 discussion again

--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -131,10 +131,6 @@
    "id": "87de1b43-a686-4fcc-ab2e-c2c341c96896",
    "metadata": {},
    "source": [
-    "<!-- ![](visuals/20.png) -->\n",
-    "\n",
-    "<!-- ![](visuals/21.png) -->\n",
-    "\n",
     "![](visuals/22.png)\n",
     "\n",
     "These plots show how certain genres have changed in both profitability and their share of the market over time. For example, “Family”, \"Action\", and “Romantic” films generally became less profitable even though their representation increased as decades passed. “War” sees a downfall of both representation and profitability, perhaps because of the world's traumatising experience with war in the last century.  “LGBT” films, on the other hand, saw both their representation and profitability tick upwards. “Superhero” genres don’t have as clear patterns, but they also show shifts. Overall, it suggests that audience tastes and industry focus move over time, giving different genres periods of growth or decline.\n",
@@ -145,11 +141,7 @@
     "\n",
     "![](visuals/24.png)\n",
     "\n",
-    "This heatmap shows which combinations of genres and themes tend to bring in higher profits. Darker blues mark higher profitability. For example, “LGBT” movies with “Love” or “Identity” themes are very profitable, as are “Family” films touching on “Deception.” Some of these profitable cells have few samples, so it might be luck rather than a broad trend. Overall, it suggests that certain thematic choices within a genre can pay off, but you need to be cautious when the sample size is small.\n",
-    "\n",
-    "<!-- ![](visuals/25.png) -->\n",
-    "\n",
-    "<!-- ![](visuals/26.png) -->\n",
+    "This heatmap shows which combinations of genres and themes tend to bring in higher profits. Darker blues mark higher profitability. For example, “LGBT” movies with “Love” or “Identity” themes are very profitable, as are “Action” films touching on “Friendship”. Some of these profitable cells have few samples, so it might be luck rather than a broad trend. Overall, it suggests that certain thematic choices within a genre can pay off, but you need to be cautious when the sample size is small.\n",
     "\n",
     "![](visuals/27.png)\n",
     "\n",
