--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -25,13 +25,36 @@
    "source": [
     "![](visuals/1.png)\n",
     "\n",
+    "This first plot show the number of movies per budget, profitavility, movie box office revenue and per decade. \n",
+    "\n",
+    "Starting with the budget, we can see on the Histogram of Budgets of the plot that there exist a lot of different budget to produce a movie, and that most movies have a low budget. Indeed we can see that when the budget of the movie increase, the number of movies produce decrease, which shoe cleary that there is not a lot of movies with a high budget of production.\n",
+    "\n",
+    "Regarding the profitability, We can see on the Histogram of Profitability that, as the profitability of the movies increase, the number of movies decrease. Which show clearly that not all movies are profitable and that it is only a minority of movies that are highly profitable.\n",
+    "\n",
+    "When we look at the Histogram of Revenue, We can see that only a minority of movies have a big box office revenue. Indeed we can see that as the box office revenue increase the number of movies decrease, which show that a lot of movies have a low box office revenue and only a few of them have a big one.\n",
+    "\n",
+    "Finally, we can see on the fourth plot the number of released movies per decade. On this plot, we can see the variety of the datas, indeed the data contained movies released before 1920 up to after 2010. We can also see that the number of released movie as increase a lot from 1920 until the year 2000 and as then suddently drop in 2010, this is because the data stop after the year 2010. The datas between 2010 and 2020 are not available which explain this drop. This mean not that less movies are produced now. If we take apart the last decade where datas are measing, we can see that the number of movies as only be increase over the decades.\n",
+    "\n",
     "<!-- ![](visuals/2.png) -->\n",
     "\n",
     "![](visuals/3.png)\n",
     "\n",
+    "On the plot of the Movie Profitability over Time, we can see different feature, first the green dot line represent the limit of profitability, Indeed it is where the profitability equal 1 which mean that the movie box office revenue is exactly the same as the budget of the movie. Under this line, the movies have a lower revenue then the budget of the movie and above the line the revenue is bigger than the budget which means that the movie is profitable. \n",
+    "\n",
+    "The blue dot represent the median profitability for each year, every dot are above the green dot line which mean that for every year over 50% of movies are profitable. \n",
+    "\n",
+    "The red line represent the linear regression done on every median dot, and around the line we can see the confidence interval of this linear regression. We can see that the profitability of movies tend to decrease over the decades, this mean that, for movies produce now, it is harder to have a good profitability than a couple of decades ago.\n",
+    "\n",
+    "The histogram above the plot show the distribution of the samples taken to do this plot. We can see that it is almost constant which mean that the samples are well distributed for every years. \n",
+    "\n",
+    "Finally the histogram on the right side of the plot show the distribution of profitability. We can see that there is not a lot of movies that are highly profitable and that most of the movies tend to have a revenue between 1 to 3 time the budget of the movies.\n",
+    "\n",
     "![](visuals/4.png)\n",
     "\n",
-    "<!-- ![](visuals/5.png) -->"
+    "<!-- ![](visuals/5.png) -->\n",
+    "\n",
+    "On the histogram above, we can see the number of failed and successful movies by decades. We can see on the histogram that the number of successful and failed movies increase every decades, this is because, as seen before, over the year more movies were released which increased the number of successful and failed movies. This do not means that movies are more or less successful now then they were before and what is important to look at is the gap between the successful and failed movies. By comparating this gap, we can see that for every decades there are more sucessfull movies then failed ones. We can also see that up to the year 1970, there seems to me more than two time more successful movies then failed one. this gap decrease starting from the year 1980. Around 1990, there is pic of failed movies, and it come close to the number of successful movies but it is still not bigger. For the past two deacdes it seems that there is one third of failed movies for two third of successful movies.\n",
+    "\n"
    ]
   },
   {
@@ -180,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "ada",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -194,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
