commit Mentor hypothesis 3

--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -98,9 +98,15 @@
    "source": [
     "![](visuals/14.png)\n",
     "\n",
+    "On this first plot of the third hypothesis, we compare the profitability of the films depending on their release day. The purpose there was to check if, for example, the pay day had an impact on the profit each movie make. It is an acceptable hypothesis to think that people are more inclined to go to the movie theater as the receive their pay than if it is the end of the month. But as we can observe on the plot, the result do not change that much from one day to another. Therefore, we can conclude that the day of release does not really have an impact on the profitability.\n",
+    "\n",
     "![](visuals/15.png)\n",
     "\n",
+    "Then, if the day of release does not have an impact on the profitability, maybe the month has. In this percpective, the second plot shows the number of movies that are released depending on the month. It is important to note that, on this plot, we took all the movies present on the dataset which have the date information and were released in the US. The result informs us that there are slightly more movies released in January, September and October. This can come from the events taking place during those months. We can for example think of the Christmas or the Halloween period which are usually ideal periods for their respective type of movies. But does it have an impact on the profitability or not ?\n",
+    "\n",
     "![](visuals/16.png)\n",
+    "\n",
+    "On the third plot, we check this hypothesis of the movie profitability being different depending on the release month. This time, the only films taken into account are the movies that contain the information about their profitability. We see that in June, the movie profitability seem a bit higher than during the other months. This result matches the beginning of the summer vacations in the US, which can explain this small growth. But otherwise, as for the first plot, the result given seem quite constant from one month to another. The variations do not seem relevant enough to permit us to draw conclusions.\n",
     "\n",
     "<!-- ![](visuals/17.png) -->\n",
     "\n",
@@ -108,7 +114,11 @@
     "\n",
     "![](visuals/19.png)\n",
     "\n",
-    "\n"
+    "On this last plot, we have comparison of the proportion of films release and profit through the decades, by months. Moreover, on the four last plots, there is a recap not in term of month, but by season. It is interesting to not that the profit data was only available from the 1930s and after. As the number of films released before this year is not really big, that information is not so relevant. On the twelve first plots, we see the fluctuation of the two curves changing quite a lot depending on the month. For example, during January, we see that the profit curve is often below the release month curve. One explanation could be that there are, in overall, more moveis released during this month. There is therefore less profitable movies compared on the number of movies released. On the other hand, if you look at June or July, the number of movies released is smaller, but the profit made by their amount is much bigger. The reason could be that the number of blockbuster during this period is much bigger than for other months. Or, as discussed previously, because of the summer vacations taking place around this time, the profit being higher is not particularly a surprise.\n",
+    "\n",
+    "As for the seasonal plots, we find again that, with the decades, the profit compared to the number of released movies seem higher during summer. It follows the logic of summer movies. On the other hand, there has been a real switch during the fall season, certainly due to this profit augmentation during the summer.\n",
+    "\n",
+    "To summarize this plot, we clearly see that, through the decades, the number of movies released and their profit has changed a lot. Adapting to the current technologies, the evolution of social events like summer vacations or other holidays.\n"
    ]
   },
   {
@@ -180,9 +190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "ada",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -194,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
