--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -25,9 +25,9 @@
    "source": [
     "![](visuals/1.png)\n",
     "\n",
-    "This first plot show the number of movies per budget, profitavility, movie box office revenue and per decade. \n",
+    "This first plot show the number of movies per budget, profitability, movie box office revenue and per decade. \n",
     "\n",
-    "Starting with the budget, we can see on the Histogram of Budgets of the plot that there exist a lot of different budget to produce a movie, and that most movies have a low budget. Indeed we can see that when the budget of the movie increase, the number of movies produce decrease, which shoe cleary that there is not a lot of movies with a high budget of production.\n",
+    "Starting with the budget, we can see on the Histogram of Budgets that there exists a lot of different budget to produce a movie, and that most movies have a low budget. Indeed we can see that when the budget of the movie increase, the number of movies produce decrease, which shoe cleary that there is not a lot of movies with a high budget of production.\n",
     "\n",
     "Regarding the profitability, We can see on the Histogram of Profitability that, as the profitability of the movies increase, the number of movies decrease. Which show clearly that not all movies are profitable and that it is only a minority of movies that are highly profitable.\n",
     "\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846a29f1-7da6-4655-8bc3-9826d236ee55",
+   "id": "6bd0ecb4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
